--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -7,11 +7,25 @@
 <body>
     <div class="container">
         <div class="header">
-            <div class="menu">test</div>
+            <span class="headerText">New Zealand</span>
+            <div class="menuheader">
+                <div class="menu menu1">1</div>
+                <div class="menu menu2">2</div>
+                <div class="menu menu3">3</div>
+                <div class="menu menu4">4</div>
+            </div>
         </div>
 
 
         <div class="middle">
+            <div class="imageContainer">
+                <div class="topImage">
+                    <img src="bilder/new-zealand1.jpg">
+                    <div class="textImage">test</div>
+                </div>
+            </div>
+
+
             <div class="flexbox-middle" id="pictures">
                 <div class="box box1">1</div>
                 <div class="box box2">2</div>
