--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -3,6 +3,8 @@
 <head>
     <title>Welcome to New Zealand</title>
     <link rel="stylesheet" type="text/css" href="CSS/resecss.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
 </head>
 <body>
     <div class="container">
@@ -20,22 +22,22 @@
         <div class="middle">
             <div class="imageContainer">
                 <div class="topImage">
-                    <img src="bilder/new-zealand1.jpg">
+                    <img src="bilder/newzealand1.jpg">
                     <div class="textImage">test</div>
                 </div>
             </div>
 
 
             <div class="flexbox-middle" id="pictures">
-                <div class="box box1">1</div>
-                <div class="box box2">2</div>
-                <div class="box box3">3</div>
-                <div class="box box4">4</div>
-                <div class="box box5">5</div>
-                <div class="box box6">6</div>
-                <div class="box box7">7</div>
-                <div class="box box8">8</div>
-                <div class="box box9">9</div>
+                <a href=""><div class="box box1">1</div></a>
+                <a href=""><div class="box box2">2</div></a>
+                <a href=""><div class="box box3">3</div></a>
+                <a href=""><div class="box box4">4</div></a>
+                <a href=""><div class="box box5">5</div></a>
+                <a href=""><div class="box box6">6</div></a>
+                <a href=""><div class="box box7">7</div></a>
+                <a href=""><div class="box box8">8</div></a>
+                <a href=""><div class="box box9">9</div></a>
             </div>
         </div>
 
