Even more design fixes wow

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -4,17 +4,18 @@
     <title>Welcome to New Zealand</title>
     <link rel="stylesheet" type="text/css" href="CSS/resecss.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+    <script src="https://kit.fontawesome.com/d310d4da21.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" type="image/png" href="bilder/favicon.png">
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="top">
         <div class="header">
-            <span class="headerText">New Zealand</span>
+            <span class="headerText"><i class="fas fa-kiwi-bird">&nbsp;New Zealand</i></span>
             <div class="menuheader">
-                <div class="menu menu1">1</div>
-                <div class="menu menu2">2</div>
-                <div class="menu menu3">3</div>
-                <div class="menu menu4">4</div>
+                <a href="#top"><div class="menu menu1">Start</div></a>
+                <a href=""><div class="menu menu2">What to do</div></a>
+                <a href=""><div class="menu menu3">Flights</div></a>
+                <a href="#bottom"><div class="menu menu4">Contact</div></a>
             </div>
         </div>
 
@@ -23,13 +24,13 @@
             <div class="imageContainer">
                 <div class="topImage">
                     <img src="bilder/newzealand1.jpg">
-                    <div class="textImage">test</div>
+                    <div class="textImage">Welcome to New Zealand</div>
                 </div>
             </div>
 
 
             <div class="flexbox-middle" id="pictures">
-                <a href=""><div class="box box1">1</div></a>
+                <a href="#bottom"><div class="box box1">1</div></a>
                 <a href=""><div class="box box2">2</div></a>
                 <a href=""><div class="box box3">3</div></a>
                 <a href=""><div class="box box4">4</div></a>
