Got the goddamn text over image to work now jesus chirst

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d310d4da21.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/png" href="bilder/favicon.png">
-</head>
+    </head>
+
+
 <body>
     <div class="container" id="top">
         <div class="header">
@@ -24,9 +26,12 @@
             <div class="imageContainer">
                 <div class="topImage">
                     <img src="bilder/newzealand1.jpg">
-                    <div class="textImage">Welcome to New Zealand</div>
+                    <div class="textImage">
+                        Welcome to New Zealand
+                    </div>
                 </div>
             </div>
+
 
 
             <div class="flexbox-middle" id="pictures">
