Removed menu buttons from header, making a dropdown instead

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d310d4da21.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/png" href="bilder/favicon.png">
+    <script src="myjquery.js" defer></script>
+
+
+    <!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
     </head>
+
+
+
+
 
 
 <body>
@@ -14,10 +28,23 @@
         <div class="header">
             <span class="headerText"><i class="fas fa-kiwi-bird">&nbsp;New Zealand</i></span>
             <div class="menuheader">
-                <a href="#top"><div class="menu menu1">Start</div></a>
+                <div class="dropdown">
+                    <i class="fas fa-bars fa-1x"></i>
+                    <div class="dropdown-content">
+                        <a href="#top"><div class="menu menu1">Start</div></a>
                 <a href=""><div class="menu menu2">What to do</div></a>
                 <a href=""><div class="menu menu3">Flights</div></a>
-                <a href="#bottom"><div class="menu menu4">Contact</div></a>
+                <a href="#bottom"><div class="menu menu4">Contact</div></a>>
+                    </div>
+                </div>
+
+
+
+
+                <!-- <a href="#top"><div class="menu menu1">Start</div></a>
+                <a href=""><div class="menu menu2">What to do</div></a>
+                <a href=""><div class="menu menu3">Flights</div></a>
+                <a href="#bottom"><div class="menu menu4">Contact</div></a> -->
             </div>
         </div>
 
@@ -35,6 +62,7 @@
 
 
             <div class="flexbox-middle" id="pictures">
+                <button>test</button>
                 <a href="#bottom"><div class="box box1">1</div></a>
                 <a href=""><div class="box box2">2</div></a>
                 <a href=""><div class="box box3">3</div></a>
