added jquery to menu

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d310d4da21.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/png" href="bilder/favicon.png">
-    <script src="myjquery.js" defer></script>
+    <script src="jQuery.js" defer></script>
 
 
     <!-- jQuery library -->
@@ -28,23 +28,16 @@
         <div class="header">
             <span class="headerText"><i class="fas fa-kiwi-bird">&nbsp;New Zealand</i></span>
             <div class="menuheader">
-                <div class="dropdown">
+                <div class="dropdown" id="dropdown">
                     <i class="fas fa-bars fa-1x"></i>
-                    <div class="dropdown-content">
+                    <div class="dropdown-content" id="dropdown-content">
                         <a href="#top"><div class="menu menu1">Start</div></a>
-                <a href=""><div class="menu menu2">What to do</div></a>
-                <a href=""><div class="menu menu3">Flights</div></a>
-                <a href="#bottom"><div class="menu menu4">Contact</div></a>>
+                        <a href=""><div class="menu menu2">What to do</div></a>
+                        <a href=""><div class="menu menu3">Flights</div></a>
+                        <a href="#bottom"><div class="menu menu4">Contact</div></a>
                     </div>
                 </div>
 
-
-
-
-                <!-- <a href="#top"><div class="menu menu1">Start</div></a>
-                <a href=""><div class="menu menu2">What to do</div></a>
-                <a href=""><div class="menu menu3">Flights</div></a>
-                <a href="#bottom"><div class="menu menu4">Contact</div></a> -->
             </div>
         </div>
 
