i dont even know what the fuck im doing pls shoot me

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -28,6 +28,7 @@
         <div class="header">
             <span class="headerText"><i class="fas fa-kiwi-bird">&nbsp;New Zealand</i></span>
             <div class="menuheader">
+
                 <div class="dropdown" id="dropdown">
                     <i class="fas fa-bars fa-1x"></i>
                     <div class="dropdown-content" id="dropdown-content">
@@ -42,7 +43,7 @@
         </div>
 
 
-        <div class="middle">
+        <!-- <div class="middle"> -->
             <div class="imageContainer">
                 <div class="topImage">
                     <img src="bilder/newzealand1.jpg">
@@ -52,19 +53,18 @@
                 </div>
             </div>
 
+        <div class="middle">
 
-
-            <div class="flexbox-middle" id="pictures">
-                <button>test</button>
-                <a href="#bottom"><div class="box box1">1</div></a>
-                <a href=""><div class="box box2">2</div></a>
-                <a href=""><div class="box box3">3</div></a>
-                <a href=""><div class="box box4">4</div></a>
-                <a href=""><div class="box box5">5</div></a>
-                <a href=""><div class="box box6">6</div></a>
-                <a href=""><div class="box box7">7</div></a>
-                <a href=""><div class="box box8">8</div></a>
-                <a href=""><div class="box box9">9</div></a>
+            <div class="grid-middle" id="todo">
+                    <div class="box box1">1</div>
+                    <div class="box box2">2</div>
+                    <div class="box box3">3</div>
+                    <div class="box box4">4</div>
+                    <div class="box box5">5</div>
+                    <div class="box box6">6</div>
+                    <div class="box box7">7</div>
+                    <div class="box box8">8</div>
+                    <div class="box box9">9</div>
             </div>
         </div>
 
