--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/d310d4da21.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" type="image/png" href="bilder/favicon.png">
-    <script src="jQuery.js" defer></script>
+    <!-- <script src="jQuery.js" defer></script> -->
 
 
     <!-- jQuery library -->
@@ -17,9 +17,6 @@
 
 <!-- Latest compiled JavaScript -->
     </head>
-
-
-
 
 
 
