--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -51,9 +51,8 @@
             </div>
 
         <div class="middle">
-
             <div class="grid-middle" id="todo">
-                    <div class="box box1">1</div>
+                    <div class="box box1">What to do?</div>
                     <div class="box box2">2</div>
                     <div class="box box3">3</div>
                     <div class="box box4">4</div>
@@ -64,8 +63,6 @@
                     <div class="box box9">9</div>
             </div>
         </div>
-
-
 
 
         <div class="footer">
