Added content to the body using grid, its fucking amazing I love grid, death to flexbox and bootsrap

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -25,42 +25,40 @@
         <div class="header">
             <span class="headerText"><i class="fas fa-kiwi-bird">&nbsp;New Zealand</i></span>
             <div class="menuheader">
-
                 <div class="dropdown" id="dropdown">
                     <i class="fas fa-bars fa-1x"></i>
                     <div class="dropdown-content" id="dropdown-content">
                         <a href="#top"><div class="menu menu1">Start</div></a>
-                        <a href=""><div class="menu menu2">What to do</div></a>
+                        <a href="#todo"><div class="menu menu2">What to do</div></a>
                         <a href=""><div class="menu menu3">Flights</div></a>
                         <a href="#bottom"><div class="menu menu4">Contact</div></a>
                     </div>
                 </div>
-
             </div>
         </div>
 
 
-        <!-- <div class="middle"> -->
-            <div class="imageContainer">
-                <div class="topImage">
-                    <img src="bilder/newzealand1.jpg">
-                    <div class="textImage">
-                        Welcome to New Zealand
-                    </div>
+      
+        <div class="imageContainer">
+            <div class="topImage">
+                <img src="bilder/newzealand1.jpg">
+                <div class="textImage">
+                    Welcome to New Zealand
                 </div>
             </div>
+        </div>
 
         <div class="middle">
             <div class="grid-middle" id="todo">
                     <div class="box box1">What to do?</div>
-                    <div class="box box2">2</div>
-                    <div class="box box3">3</div>
+                    <div class="box box2"><img src="bilder/new-zealand4.jpg"></div>
+                    <div class="box box3">New Zealand has something for everyone. Besides the breathtaking natues that NZ has to offer you can skydive, visit <a href="#hobbiton">Hobbiton</a></div>
                     <div class="box box4">4</div>
-                    <div class="box box5">5</div>
-                    <div class="box box6">6</div>
+                    <div class="box box5"><img src="bilder/new-zealand6.jpg"></div>
+                    <div class="box box6" id="hobbiton"><img src="bilder/new-zealand5.jpg"></div>
                     <div class="box box7">7</div>
                     <div class="box box8">8</div>
-                    <div class="box box9">9</div>
+                    <div class="box box9"><img src="bilder/new-zealand7.jpg"></div>
             </div>
         </div>
 
