--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -16,7 +16,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
 
 <!-- Latest compiled JavaScript -->
-    </head>
+</head>
 
 
 
@@ -43,7 +43,7 @@
             <div class="topImage">
                 <img src="bilder/newzealand1.jpg">
                 <div class="textImage">
-                    Welcome to New Zealand
+                    <p>Welcome to New Zealand</p>
                 </div>
             </div>
         </div>
@@ -58,26 +58,30 @@
                          snow covered mountains to deep valleys, beautiful beaches to <a href="#sounds"><strong>fjords/sounds</strong></a> and rainforests.
                         No words or pictures could ever do this country justice, so why don't you <a href="#flight"><strong>book a flight</strong></a>
                         and see it for yourself?</p>
-                        </div>
-                    <div class="box box4">Cathedral Cove is located at Hahei, just 10minutes drive from the famous Hot Water Beach. 
+                    </div>
 
+                    <div class="box box4">Cathedral Cove is located at Hahei, just 10minutes drive from the famous Hot Water Beach. 
                         Foot access to Cathedral Cove starts at the top of Grange Road.  Parking is at the Visitor Car Park on Pa Road (turn right just after entering Hahei). During the summer months a shuttle service runs from the visitor car park on Pa Road to the start of the Cathedral Cove track. Alternatively you can walk from the car park around the beach to the start of the track which will take an extra 20mins.
-                        
-                        It is here that you can also access Gemstone Bay and Mares Leg.
-                        
+                        It is here that you can also access Gemstone Bay and Mares Leg. 
                         Cathedral Cove Marine Reserve, Te Whanganui- A-Hei, covers 9 square kilometres and is New Zealand’s sixth marine reserve. It is administered by the Department of Conservation.</div>
+
                     <div class="box box5"><img src="bilder/new-zealand6.jpg"></div>
                     <div class="box box6" id="hobbiton"><img src="bilder/new-zealand5.jpg"></div>
-                    <div class="box box7">The Hobbiton Movie Set was a significant location used for The Lord of the Rings film trilogy and The Hobbit film series. It is situated on a family run farm about 8 kilometres (5.0 mi) west of Hinuera and 10 kilometres (6.2 mi) southwest of Matamata, in Waikato, New Zealand, and is now a Tolkien tourism destination, offering a guided tour of the set.
-                    </div>
+                    <div class="box box7">The Hobbiton Movie Set was a significant location used for The Lord of the Rings film trilogy and The Hobbit film series. It is situated on a family run farm about 8 kilometres (5.0 mi) west of Hinuera and 10 kilometres (6.2 mi) southwest of Matamata, in Waikato, New Zealand, and is now a Tolkien tourism destination, offering a guided tour of the set.</div>
                     <div class="box box8">Described by Rudyard Kipling as the 'eighth wonder of the world', Milford Sound was carved by glaciers during the ice ages. Breathtaking in any weather, the fiord's cliffs rise vertically from the dark waters, mountain peaks scrape the sky and waterfalls cascade downwards from as high as 1000 metres. When it rains in Milford Sound, and it often does, those waterfalls multiply with magnificent effect. 
-
                         Boat cruises – during the day or overnight – are an excellent way to experience the Sound. Adventurous types might also like to head out sea kayaking, diving or flightseeing. To learn more about the local marine life, visit the underwater observatory at Harrison Cove and marvel at the black coral, 11-legged sea stars and delicate anemones.</div>
+
                     <div class="box box9" id="sounds"><img src="bilder/new-zealand7.jpg"></div>
             </div>
             <div class="flight" id="flight">
                 <div class="box fbox1">Flights</div>
-                <div class="box fbox2">2</div>
+                <div class="box fbox2"><img src="bilder/area-map-of-NZ.jpg"></div>
+                <div class="box fbox3">
+                    <form class="form-box">
+                        <input type="text" placeholder="Where are you going from?">
+                        <label for="">Where do you want to go?</label>
+                    </form>
+                </div>
             </div>
         </div>
 
@@ -100,7 +104,7 @@
                     <br/>
                     <form action="MinReseSite.html" method="post">
                         <input type="email" name="email" class="text-input contact-input"placeholder="Your email address"><br/><br/>
-                        <textarea name="message" cols="50" rows="5" class="text-input contact-input" placeholder="Write your message here"></textarea><br/><br/>
+                        <textarea name="message" class="text-input contact-input" placeholder="Write your message here"></textarea><br/><br/>
                         <button type="submit" class="btn btn-big">Send</button>
                     </form>
                 </div>
