final commit whaddup

--- a/MinReseSite.html
+++ b/MinReseSite.html
@@ -14,8 +14,6 @@
 
 <!-- Popper JS -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-
-<!-- Latest compiled JavaScript -->
 </head>
 
 
@@ -30,8 +28,8 @@
                     <div class="dropdown-content" id="dropdown-content">
                         <a href="#top"><div class="menu menu1">Start</div></a>
                         <a href="#todo"><div class="menu menu2">What to do</div></a>
-                        <a href="#flight"><div class="menu menu3">Flights</div></a>
-                        <a href="#bottom"><div class="menu menu4">Contact</div></a>
+                        <a href="#pictures"><div class="menu menu4">Pictures</div></a>
+                        <a href="#bottom"><div class="menu menu5">Contact</div></a>
                     </div>
                 </div>
             </div>
@@ -52,7 +50,7 @@
             <div class="grid-middle" id="todo">
                     <div class="box box1">What to do?</div>
                     <div class="box box2"><img src="bilder/new-zealand4.jpg"></div>
-                    <div class="box box3"><p>New Zealand has something for everyone. Besides the breathtaking nature that New Zealand
+                    <div class="box box3"><p><h3>There is something for everyone</h3><br/>New Zealand has something for everyone. Besides the breathtaking nature that New Zealand
                         has to offer you can skydive, go bungiejump, visit <a href="#hobbiton"><strong>Hobbiton</strong></a> or go to
                         one of many big cities. New Zealand offers a wide selection of different natures, from tall, 
                          snow covered mountains to deep valleys, beautiful beaches to <a href="#sounds"><strong>fjords/sounds</strong></a> and rainforests.
@@ -60,30 +58,56 @@
                         and see it for yourself?</p>
                     </div>
 
-                    <div class="box box4">Cathedral Cove is located at Hahei, just 10minutes drive from the famous Hot Water Beach. 
+                    <div class="box box4"><p><h3>Cathedral Cove</h3><br/>Cathedral Cove is located at Hahei, just 10minutes drive from the famous Hot Water Beach. 
                         Foot access to Cathedral Cove starts at the top of Grange Road.  Parking is at the Visitor Car Park on Pa Road (turn right just after entering Hahei). During the summer months a shuttle service runs from the visitor car park on Pa Road to the start of the Cathedral Cove track. Alternatively you can walk from the car park around the beach to the start of the track which will take an extra 20mins.
-                        It is here that you can also access Gemstone Bay and Mares Leg. 
-                        Cathedral Cove Marine Reserve, Te Whanganui- A-Hei, covers 9 square kilometres and is New Zealand’s sixth marine reserve. It is administered by the Department of Conservation.</div>
+                        It is here that you can also access Gemstone Bay and Mares Leg.</p> </div>
 
                     <div class="box box5"><img src="bilder/new-zealand6.jpg"></div>
                     <div class="box box6" id="hobbiton"><img src="bilder/new-zealand5.jpg"></div>
-                    <div class="box box7">The Hobbiton Movie Set was a significant location used for The Lord of the Rings film trilogy and The Hobbit film series. It is situated on a family run farm about 8 kilometres (5.0 mi) west of Hinuera and 10 kilometres (6.2 mi) southwest of Matamata, in Waikato, New Zealand, and is now a Tolkien tourism destination, offering a guided tour of the set.</div>
-                    <div class="box box8">Described by Rudyard Kipling as the 'eighth wonder of the world', Milford Sound was carved by glaciers during the ice ages. Breathtaking in any weather, the fiord's cliffs rise vertically from the dark waters, mountain peaks scrape the sky and waterfalls cascade downwards from as high as 1000 metres. When it rains in Milford Sound, and it often does, those waterfalls multiply with magnificent effect. 
-                        Boat cruises – during the day or overnight – are an excellent way to experience the Sound. Adventurous types might also like to head out sea kayaking, diving or flightseeing. To learn more about the local marine life, visit the underwater observatory at Harrison Cove and marvel at the black coral, 11-legged sea stars and delicate anemones.</div>
+                    <div class="box box7"><p><h3>Experience Middle-Earth</h3><br/>The Hobbiton Movie Set was a significant location used for The Lord of the Rings film trilogy and The Hobbit film series. It is situated on a family run farm about 8 kilometres (5.0 mi) west of Hinuera and 10 kilometres (6.2 mi) southwest of Matamata, in Waikato, New Zealand, and is now a Tolkien tourism destination, offering a guided tour of the set.</div>
+                    <div class="box box8"><h3>Eigth wonder of the world</h3><br/>Described by Rudyard Kipling as the 'eighth wonder of the world', Milford Sound was carved by glaciers during the ice ages. Breathtaking in any weather, the fiord's cliffs rise vertically from the dark waters, mountain peaks scrape the sky and waterfalls cascade downwards from as high as 1000 metres. When it rains in Milford Sound, and it often does, those waterfalls multiply with magnificent effect. 
+                        Boat cruises – during the day or overnight – are an excellent way to experience the Sound.</p></div>
 
                     <div class="box box9" id="sounds"><img src="bilder/new-zealand7.jpg"></div>
             </div>
-            <div class="flight" id="flight">
-                <div class="box fbox1">Flights</div>
-                <div class="box fbox2"><img src="bilder/area-map-of-NZ.jpg"></div>
-                <div class="box fbox3">
-                    <form class="form-box">
-                        <input type="text" placeholder="Where are you going from?">
-                        <label for="">Where do you want to go?</label>
-                    </form>
-                </div>
+
+            
+
+
+
+
+
+
+            <div class="pictures" id="pictures">
+                <div class="box fbox1">Pictures</div>
+                <div class="box fbox2"><img src="bilder/image1.jpeg"></div>
+                <div class="box fbox3"><img src="bilder/image2.jpeg"></div>
+                <div class="box fbox4"><img src="bilder/image3.jpeg"></div>
+                <div class="box fbox5"><img src="bilder/image4.jpeg"></div>
+                <div class="box fbox6"><img src="bilder/image5.jpeg"></div>
+                <div class="box fbox7"><img src="bilder/image6.jpeg"></div>
+                <div class="box fbox8"><img src="bilder/image7.jpeg"></div>
+                <div class="box fbox9"><img src="bilder/image8p.jpeg"></div>
+                <div class="box fbox10"><img src="bilder/image9p.jpeg"></div>
+                <div class="box fbox11"><img src="bilder/image10.jpeg"></div>
+                <div class="box fbox12"><img src="bilder/image11.jpeg"></div>
             </div>
         </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
         <div class="footer">
